Tests pour générer une loi centrée réduite
Problèmes de compileurs, je dois réinstaller des trucs

--- a/CalculIntensif.cbp
+++ b/CalculIntensif.cbp
@@ -13,6 +13,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++0x" />
 					<Add option="-g" />
 				</Compiler>
 			</Target>
@@ -32,6 +33,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Calcul.cpp" />
+		<Unit filename="Calcul.h" />
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
