--- a/CalculIntensif.cbp
+++ b/CalculIntensif.cbp
@@ -3,23 +3,24 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="CalculIntensif" />
-		<Option execution_dir="C:\Users\Laurence\Documents\projettest\CalculIntensif\" />
+		<Option execution_dir="C:/Users/Laurence/Documents/projettest/CalculIntensif/" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\CalculIntensif" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/CalculIntensif" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-std=c++0x" />
 					<Add option="-g" />
+					<Add option="-fopenmp" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\CalculIntensif" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/CalculIntensif" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -32,7 +33,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-fopenmp" />
 		</Compiler>
+		<Linker>
+			<Add library="../../../../Program Files (x86)/CodeBlocks/MinGW/lib/gcc/x86_64-w64-mingw32/5.1.0/libgomp.a" />
+		</Linker>
 		<Unit filename="Calcul.cpp" />
 		<Unit filename="Calcul.h" />
 		<Unit filename="main.cpp" />
