--- a/CalculIntensif.cbp
+++ b/CalculIntensif.cbp
@@ -13,10 +13,13 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-std=c++0x" />
+					<Add option="-std=c++11" />
 					<Add option="-g" />
 					<Add option="-fopenmp" />
 				</Compiler>
+				<Linker>
+					<Add library="../../../../Program Files (x86)/CodeBlocks/MinGW/lib/gcc/x86_64-w64-mingw32/5.1.0/libgomp.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/CalculIntensif" prefix_auto="1" extension_auto="1" />
