Projet totalement terminée, lancement du test final.

--- a/CalculIntensif.cbp
+++ b/CalculIntensif.cbp
@@ -36,6 +36,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c++11" />
 			<Add option="-fopenmp" />
 		</Compiler>
 		<Linker>
